# SlackClient

./: .gitignore  README.md  pyproject.toml
src/slackclient/: client.py
src/slackclient/schemas/: __init__.py
tests/: authanticate.py
